--- a/templates/method.html
+++ b/templates/method.html
@@ -7,10 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world!!!</h1>
-    <hr>
-    hahaha!!!
-    <a href="/main">메인</a><br>
-    <a href="/upload">파일업로드</a>
+    <form action="/method" method="post">
+        <input type="text" name="name" />
+        <input type="submit"/>
+    </form>
 </body>
 </html>
