--- a/templates/show_result.html
+++ b/templates/show_result.html
@@ -7,10 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello world!!!</h1>
-    <hr>
-    hahaha!!!
-    <a href="/main">메인</a><br>
-    <a href="/upload">파일업로드</a>
+    이름은 : {{data['name']}} 입니다.
 </body>
 </html>
